<resources>
    <string name="app_name">Trash Detector</string>
    <string name="title_hint">Đưa vật thể rác thải cần xác định vào giữa khung hình và nhấn nút chụp hoặc chạm vào vùng xem trước</string>
    <string name="title_ok">Đã hiểu</string>
    <string name="title_trash_1">Rác thải vô cơ</string>
    <string name="title_trash_2">Rác thải hữu cơ</string>
    <string name="title_trash_3">Rác thải tái chế</string>
    <string name="title_information">Phân loại rác thải</string>
    <string name="title_result">Kết quả nhận diện</string>
    <string name="title_detail">Chi tiết</string>
    <string name="title_cancel">Quay lại</string>
    <string name="title_trash_description">Rác thải đang là 1 vấn đề nghiêm trọng với các quốc gia trên thế giới, đặc biệt là nước ta. Do đó, việc phân loại rác thải tại nguồn là vô cùng quan trọng. Rác thải nguồn được phân làm 3 loại chính:</string>
    <string name="title_about">
        Phương Anh Tuấn\nTrash Detector v1.3
    </string>
    <string name="title_history">Lịch sử nhận diện</string>
    <string name="title_reset">Đã xóa lịch sử nhận diện</string>
    <string name="title_empty_history">Chưa có dữ liệu</string>
    <string name="title_def">Khái niệm</string>
    <string name="title_from">Nguồn gốc</string>
    <string name="title_example">Ví dụ</string>
    <string name="title_do">Cách xử lý</string>
    <string name="title_no_recent">Chưa ghi nhận lần nhận dạng nào</string>
    <string name="title_percent">Độ chính xác: %s%s</string>
    <string name="title_more">Wikipedia</string>
    <string name="msg_no_internet">Không nhận thấy kết nối Internet</string>
    <string name="alert_delete_history">Xóa toàn bộ lịch sử nhận diện?</string>
    <string name="title_delete">Xóa</string>
    <string name="title_permission">Hãy cấp quyền cho ứng dụng để sử dụng chức năng này</string>

    // Rác vô cơ
    <string name="des_1">Gạch đá, ly cốc, băng đĩa hỏng, …</string>
    <string name="title_def_1">Rác vô cơ là những loại rác không thể sử dụng được nữa, cũng không thể tái chế hoặc tốn quá nhiều chi phí để tái chế nên chỉ có thể xử lý bằng cách mang ra các khu chôn lấp rác thải.</string>
    <string name="title_ex_1">- Gạch/ đá, đồ sành/ sứ vỡ hoặc không còn giá trị sử dụng.\n- Ly/ cốc/ bình thủy tinh vỡ…\n- Các loại vỏ sò/ ốc, vỏ trứng…\n- Đồ da, đồ cao su, đồng hồ hỏng, băng đĩa nhạc, radio… không thể sử dụng.</string>
    <string name="title_from_1">- Các loại vật liệu xây dựng không thể sử dụng hoặc đã qua sử dụng và được bỏ đi.\n- Các loại bao bì bọc bên ngoài hộp/ chai thực phẩm.\n- Các loại túi nilong được bỏ đi sau khi con người dùng đựng thực phẩm.\n- Một số loại vật dụng/ thiết bị trong đời sống hàng ngày của con người.</string>
    <string name="title_do_1">Thu gom vào dụng cụ chứa rác và đưa đến điểm tập kết để xe chuyên dụng đến vận chuyển, đưa đi xử lý tại các khu xử lý rác thải tập trung theo quy định.</string>

    // Rác hữu cơ
    <string name="des_2">Rau củ, cơm canh, cỏ cây, …</string>
    <string name="title_def_2">Rác hữu cơ là loại rác dễ phân hủy và có thể đưa vào tái chế để sử dụng cho việc chăm bón và làm thức ăn cho động vật.</string>
    <string name="title_ex_2">- Các loại rau, củ quả đã bị hư, thối…\n- Cơm/ canh/ thức ăn còn thừa hoặc bị thiu…\n- Các loại bã chè, bã cafe.\n- Cỏ cây bị xén/ chặt bỏ, hoa rụng….\n- Mica trung quốc.</string>
    <string name="title_from_2">- Phần bỏ đi của thực phẩm sau khi lấy đi phần chế biến được thức ăn cho con người.\n- Phần thực phẩm thừa hoặc hư hỏng không thể sử dụng cho con người.\n- Các loại hoa, lá  cây, cỏ không được con người sử dụng sẽ trở thành rác thải trong môi trường.</string>
    <string name="title_do_2">Thu gom riêng vào vật dụng chứa rác để tận dụng làm phân compost.</string>

    // Rác tái chế
    <string name="des_3">Giấy bìa, vải, nhựa, …</string>
    <string name="title_def_3">Rác tái chế là loại rác khó phân hủy nhưng có thể tái chế lại thành sản phẩm mới cùng loại hoặc có thể tái chế thành một sản phẩm khác để sử dụng nhằm mục đích phục vụ cho con người.</string>
    <string name="title_ex_3">- Thùng carton, sách báo cũ.\n- Hộp giấy, bì thư, bưu thiếp đã qua sử dụng.\n- Các loại vỏ lon nước ngọt/ lon bia/ vỏ hộp trà…\n- Các loại ghế nhựa, thau/ chậu nhựa, quần áo và vải cũ…</string>
    <string name="title_from_3">- Các loại giấy thải.\n- Các loại hộp/ chai/ vỏ lon thực phẩm bỏ đi.</string>
    <string name="title_do_3">Cần được tách riêng, đựng trong túi ny-lon hoặc túi vải để bán lại cho cơ sở tái chế.</string>
    <string name="title_skip">Bỏ qua</string>
    <string name="title_back">Thoát</string>
    <string name="title_begin">Bắt đầu nhận diện</string>

    // User Guide
    <string name="title_main">Nhận diện và phân loại</string>
    <string name="title_main_content">Phân loại rác thải sinh hoạt nhanh chóng và chính xác</string>
    <string name="title_result_guide">Xem kết quả</string>
    <string name="title_result_content">Xem chi tiết kết quả phân loại rác để dễ dàng ghi nhớ về sau</string>
    <string name="title_his_guide">Lịch sử nhận diện</string>
    <string name="title_his_content">Tra cứu lịch sử phân loại rác thải dễ dàng</string>
    <string name="title_detail_guide">Thông tin chi tiết</string>
    <string name="title_detail_content">Tra cứu thông tin từng loại rác để có cách xử lý phù hợp</string>
    <string name="title_done">Và còn nhiều chức năng thú vị, hãy cùng bắt đầu khám phá!</string>
</resources>
