<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_gradient_orange">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/title_trash_1"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        style="@style/ItemShadowStyle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:translationZ="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <ImageView
            android:id="@+id/imageTrash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetail"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="#20000000"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardImage">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_def"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textDef1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:alpha="0.9"
                    android:text="@string/title_def_1"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_from"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textFrom1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:alpha="0.9"
                    android:text="@string/title_from_1"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textDo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_do"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textDo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:alpha="0.9"
                    android:text="@string/title_do_1"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_example"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textExample1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:alpha="0.9"
                    android:text="@string/title_ex_1"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardDetail">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/title_cancel"
            android:textColor="@android:color/white"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
