<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRootResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_rounded"
    android:maxWidth="400dp">

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableEnd="@drawable/ic_check_circle"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="@string/title_result"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStatus">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOutput"
            style="@style/ItemShadowStyle"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_margin="24dp"
            android:translationZ="12dp"
            app:cardCornerRadius="72dp">

            <ImageView
                android:id="@+id/imageOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_to" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutResult">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ripple_white"
            android:gravity="center"
            android:text="@string/title_cancel"
            android:textColor="#cccccc"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonDetail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_ripple_white"
            android:gravity="center"
            android:text="@string/title_detail"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFullScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageFullScreen"
            android:layout_width="384dp"
            android:layout_height="384dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
